@@ -2,6 +2,7 @@
 25/01/2011 Changes
 
 Added handling of Assignment expressions.
+Added handling of expressions made up of only a Primary.
 
 
 24/02/2011 Changes
